# predicting-quantum-properties

./: .gitignore  data_acquisition_shadow.py  generate_observables.py  prediction_shadow.py  pyproject.toml  ruff.toml
tests/: test_scripts.py  test_shadow.py
tests/snapshots/: data_acquisition_shadow_d_m10_system_size5.txt  data_acquisition_shadow_d_m20_system_size10.txt  generated_observables_10.txt  generated_observables_5.txt  prediction_shadow.txt
