[tool.poetry]
name = "predicting-quantum-properties"
version = "0.1.0"
description = ""
authors = [
    "Hsin-Yuan Huang <momohuang@gmail.com>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.13.0"
more-itertools = "^10.5.0"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
