[project]
name = "predicting-quantum-properties"
version = "0.1.0"
description = ""
authors = [
    "Hsin-Yuan Huang <momohuang@gmail.com>"
]
readme = "README.md"
python-requires = ">=3.12"
dependencies = [
    "typer >=0.13.0",
    "more-itertools >=10.5.0",
    "numpy >=2.1.3"
]

[dependency-groups]
dev = [
    "pytest >=8.3.3",
    "ruff >=0.11",
]
